# six

./: Cargo.toml  LICENSE  README.md
resources/: digraph.csv
src/: cmd.rs  components.rs  digraphs.rs  ex.rs  main.rs  normal.rs  rope.rs  systems.rs
src/cmd/: cmd.rs  insert.rs  motion.rs  operator.rs  secondary.rs  text_object.rs
src/components/: buffer.rs  config.rs  display.rs  editor.rs  insert_log.rs  registers.rs  repeat.rs  search.rs  session.rs  state.rs
src/ex/: cmd.rs  error.rs  range.rs  solver.rs
src/misc/: io.rs  path.rs
src/normal/: cmd.rs  motion.rs  operator.rs
src/systems/: commons.rs  edit.rs  event.rs  ex.rs  immediate.rs  input.rs  insert.rs  interactive.rs  lifecycle.rs  nav.rs  pre_render.rs  render.rs  search.rs  status.rs  sys.rs
src/systems/edit/: batch.rs  buffer.rs  post_edit.rs  session.rs  utils.rs
src/systems/ex/: args.rs  builtin.rs  exec.rs  fs.rs
src/systems/input/: evt.rs  handler.rs  insert.rs  normal.rs  parsers.rs  trie.rs
src/systems/insert/: buffer.rs  log.rs  post_insert.rs  session.rs  utils.rs
src/systems/nav/: buffer.rs  rules.rs  session.rs  utils.rs
